improving workflow run

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,8 +1,8 @@
 name: update-readme
 
 on:
-  push:
-    branches: [main]
+  workflow_dispatch:
+  push: {branches: ["master", "main"]}
 
 jobs:
   reamde-update:
