--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -13,7 +13,7 @@ jobs:
           python-version: 3.9
 
       - name: Install python dependencies
-        run: pip install -r python/requirements.txt
+        run: pip install -r src/python/requirements.txt
 
       - name: Run tests and collect coverage
         run: |
