--- a/.github/workflows/js_coverage.yml
+++ b/.github/workflows/js_coverage.yml
@@ -1,24 +1,20 @@
 name: Code Coverage
 
-on: [push, pull_request]
+on: push
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x, 14.x]
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up Node.js ${{ matrix.node-version }}
+    - name: Set up Node.js
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 14.x
 
     - name: Install dependencies
       run: npm install
