--- a/.github/workflows/php_coverage.yml
+++ b/.github/workflows/php_coverage.yml
@@ -12,7 +12,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Get into php dir
-      run: cd src/php
+      - bash: cd srv/php
 
     - name: Get composer cache directory
       id: composer_config
