--- a/.github/workflows/php_coverage.yml
+++ b/.github/workflows/php_coverage.yml
@@ -11,18 +11,14 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Get into php dir
-      - bash: cd srv/php
-
     - name: Get composer cache directory
       id: composer_config
-      uses: baschny/php-composer-action@v1
+      uses: php-actions/composer@v7
       with:
-        composer_version: 2.3.5
-        command: install
+        args: -d src/php
 
     - name: Run PHPUnit
-      run: vendor/bin/phpunit --coverage-clover=clover coverage.xml
+      run: src/php/vendor/bin/phpunit --coverage-clover=clover coverage.xml
 
     - name: Upload coverage report
       run: bash <(curl -s https://codecov.io/bash)
