:construction_worker: Set coverage file path

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -31,3 +31,5 @@ jobs:
 
     - name: Upload to codecov
       uses: codecov/codecov-action@v2
+      with:
+        files: src/js/coverage/clover.xml src/php/coverage.xml src/python/coverage.xml
